--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,11 @@
 											{% endif %}
                                         </ul>
 								</li>
+								<li>
+									<a href="{% url 'product:card' %}" >
+										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg"></span>
+									</a>
+								</li>
 								{% else %}
 								<li>
 									<a href="{% url 'accounts:login' %}" >
