--- a/templates/card.html
+++ b/templates/card.html
@@ -1,112 +1,7 @@
-<!DOCTYPE html>
-<html lang="zxx">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="author" content="Themezhub" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-        <title>IKE Print</title>
-		 
-        <!-- Custom CSS -->
-        <link href="assets/css/styles.css" rel="stylesheet">
-		
-    </head>
-	
-    <body>
-	
-		 <!-- ============================================================== -->
-        <!-- Preloader - style you can find in spinners.css -->
-        <!-- ============================================================== -->
-       <div class="preloader"></div>
-		
-        <!-- ============================================================== -->
-        <!-- Main wrapper - style you can find in pages.scss -->
-        <!-- ============================================================== -->
-        <div id="main-wrapper">
-		
-            <!-- ============================================================== -->
-            <!-- Top header  -->
-            <!-- ============================================================== -->
-            <!-- Start Navigation -->
-			<div class="header header-light dark-text">
-				<div class="container">
-					<nav id="navigation" class="navigation navigation-landscape">
-						<div class="nav-header">
-							<a class="nav-brand" href="{% url 'home:home' %}">
-								<img src="assets/img/newImages/new1/logo.png" class="logo" alt="" />
-							</a>
-							<div class="nav-toggle"></div>
-							<div class="mobile_nav">
-								<ul>
-									<li>
-									<a href="#" onclick="openSearch()">
-										<i class="lni lni-search-alt"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" data-toggle="modal" data-target="#login">
-										<i class="lni lni-user"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" onclick="openWishlist()">
-										<i class="lni lni-heart"></i><span class="dn-counter">2</span>
-									</a>
-								</li>
-								<li>
-									<a href="#" onclick="openCart()">
-										<i class="lni lni-shopping-basket"></i><span class="dn-counter">0</span>
-									</a>
-								</li>
-								</ul>
-							</div>
-						</div>
-						<div class="nav-menus-wrapper" style="transition-property: none;">
-							<ul class="nav-menu">
-							     <li><a href="{% url 'home:home' %}">Home</a></li>
-								<li><a href="custom.html">self customization</a></li>
-								<li><a href="PosterAndBanners.html">posters and banners</a></li>
-								<li><a href="CallExpert.html">Call Designer</a></li>
-								<li><a href="Ordaring.html">Ordaring</a></li>								
-							</ul>
-							
-							<ul class="nav-menu nav-menu-social align-to-right">
-								
-								<li>
-									<a href="#" data-toggle="modal" data-target="#login">
-										<i class="lni lni-user"></i>
-									</a>
-								</li>
-                                <li>
-                                    <a class="ProfileLinkHeader">
-                                        <img class="UserProfileImages" src="assets/img/team-1.jpg">
-                                        Ahmed Tarek</a>
-                                        <ul class="nav-dropdown nav-submenu">
-                                            <li><a href="profile-info.html">My Profile</a></li>
-                                            <li><a href="login.html">Log Out</a></li>
-                                        </ul>
-								</li>
-								<li>
-									<a href="#" onclick="openWishlist()">
-										<i class="lni lni-heart"></i><span class="dn-counter">2</span>
-									</a>
-								</li>
-								<li>
-									<a href="#" onclick="openCart()">
-										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg">3</span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
-				</div>
-			</div>
-			<!-- End Navigation -->
-			<div class="clearfix"></div>
-			<!-- ============================================================== -->
-			<!-- Top header  -->
-			<!-- ============================================================== -->
+{% extends 'base.html' %}
+{% load static %}
 
+{% block body %}
 			<!-- ======================= Top Breadcrubms ======================== -->
 			<div class="gray py-3">
 				<div class="container">
@@ -187,7 +82,7 @@
                                                         <div class="cart_single ProductImage d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb" style="width: 100%">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             
@@ -197,7 +92,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -212,7 +107,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -244,7 +139,7 @@
                                                         <div class="cart_single ProductImage d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb" style="width: 100%">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             
@@ -254,7 +149,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -269,7 +164,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -301,7 +196,7 @@
                                                         <div class="cart_single ProductImage d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb" style="width: 100%">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             
@@ -311,7 +206,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -326,7 +221,7 @@
                                                         <div class="cart_single d-flex align-items-start mfliud-bot">
                                                             <div class="cart_selected_single_thumb">
                                                                 <a href="#">
-                                                                    <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                                    <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                                 </a>
                                                             </div>
                                                             <div class="cart_single_caption pl-3">
@@ -392,7 +287,7 @@
 											<div class="cart_single d-flex align-items-start mfliud-bot">
 												<div class="cart_selected_single_thumb">
 													<a href="#">
-                                                        <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                        <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                     </a>
 												</div>
 												<div class="cart_single_caption pl-3">
@@ -407,7 +302,7 @@
 											<div class="cart_single d-flex align-items-start mfliud-bot">
 												<div class="cart_selected_single_thumb">
 													<a href="#">
-                                                        <img src="assets/img/product/4.jpg" width="75" class="img-fluid rounded" alt="">
+                                                        <img src="{% static 'assets/img/product/4.jpg' %}" width="75" class="img-fluid rounded" alt="">
                                                     </a>
 												</div>
 												<div class="cart_single_caption pl-3">
@@ -468,161 +363,4 @@
 			</section>
 			<!-- ======================= Product Detail End ======================== -->
 			
-
-			<!-- ============================ Footer Start ================================== -->
-			<footer class="dark-footer skin-dark-footer style-2">
-				<div class="footer-middle">
-					<div class="container">
-						<div class="row">
-							
-							<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-								<div class="footer_widget">
-									<img src="assets/img/newImages/new1/logo.png" class="img-footer small mb-2" alt="" />
-									
-									<div class="address mt-3">
-										3298 Grant Street Longview, TX<br>United Kingdom 75601	
-									</div>
-									<div class="address mt-3">
-										1-202-555-0106<br>help@shopper.com
-									</div>
-									<div class="address mt-3">
-										<ul class="list-inline">
-											<li class="list-inline-item"><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
-											<li class="list-inline-item"><a href="#"><i class="lni lni-twitter-filled"></i></a></li>
-											<li class="list-inline-item"><a href="#"><i class="lni lni-youtube"></i></a></li>
-											<li class="list-inline-item"><a href="#"><i class="lni lni-instagram-filled"></i></a></li>
-											<li class="list-inline-item"><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							
-							<div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
-								<div class="footer_widget">
-									<h4 class="widget_title">Supports</h4>
-									<ul class="footer-menu">
-										<li><a href="#">Contact Us</a></li>
-										<li><a href="#">About Page</a></li>
-										<li><a href="#">Size Guide</a></li>
-										<li><a href="#">Shipping & Returns</a></li>
-									
-									</ul>
-								</div>
-							</div>
-									
-							<div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
-								<div class="footer_widget">
-									<h4 class="widget_title">Shop</h4>
-									<ul class="footer-menu">
-										<li><a href="#">Men's Shopping</a></li>
-										<li><a href="#">Women's Shopping</a></li>
-										<li><a href="#">Kids's Shopping</a></li>
-										
-									</ul>
-								</div>
-							</div>
-					
-							<div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
-								<div class="footer_widget">
-									<h4 class="widget_title">Company</h4>
-									<ul class="footer-menu">
-										<li><a href="#">About</a></li>
-										<li><a href="#">Blog</a></li>
-										<li><a href="#">Affiliate</a></li>
-										<li><a href="#">Login</a></li>
-									</ul>
-								</div>
-							</div>
-							
-							<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-								<div class="footer_widget">
-									<h4 class="widget_title">Subscribe</h4>
-									<p>Receive updates, hot deals, discounts sent straignt in your inbox daily</p>
-									<div class="foot-news-last">
-										<div class="input-group">
-										  <input type="text" class="form-control" placeholder="Email Address">
-											<div class="input-group-append">
-												<button type="button" class="input-group-text b-0 text-light"><i class="lni lni-arrow-right"></i></button>
-											</div>
-										</div>
-									</div>
-									<div class="address mt-3">
-										<h5 class="fs-sm text-light">Secure Payments</h5>
-										<div class="scr_payment"><img src="assets/img/card.png" class="img-fluid" alt="" /></div>
-									</div>
-								</div>
-							</div>
-								
-						</div>
-					</div>
-				</div>
-				
-				<div class="footer-bottom">
-					<div class="container">
-						<div class="row align-items-center">
-							<div class="col-lg-12 col-md-12 text-center">
-								<p class="mb-0">© 2023 . Designd By <a href="#">IKE Print</a>.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- ============================ Footer End ================================== -->
-			
-
-			<a id="back2Top" class="top-scroll" title="Back to top" href="#"><i class="ti-arrow-up"></i></a>
-			
-
-		</div>
-		<!-- ============================================================== -->
-		<!-- End Wrapper -->
-		<!-- ============================================================== -->
-
-		<!-- ============================================================== -->
-		<!-- All Jquery -->
-		<!-- ============================================================== -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/popper.min.js"></script>
-		<script src="assets/js/bootstrap.min.js"></script>
-		<script src="assets/js/ion.rangeSlider.min.js"></script>
-		<script src="assets/js/slick.js"></script>
-		<script src="assets/js/slider-bg.js"></script>
-		<script src="assets/js/lightbox.js"></script> 
-		<script src="assets/js/smoothproducts.js"></script>
-		<script src="assets/js/snackbar.min.js"></script>
-		<script src="assets/js/jQuery.style.switcher.js"></script>
-		<script src="assets/js/custom.js"></script>
-		<!-- ============================================================== -->
-		<!-- This page plugins -->
-		<!-- ============================================================== -->	
-
-		<script>
-			function openWishlist() {
-				document.getElementById("Wishlist").style.display = "block";
-			}
-			function closeWishlist() {
-				document.getElementById("Wishlist").style.display = "none";
-			}
-		</script>
-		
-		<script>
-			function openCart() {
-				document.getElementById("Cart").style.display = "block";
-			}
-			function closeCart() {
-				document.getElementById("Cart").style.display = "none";
-			}
-		</script>
-
-		<script>
-			function openSearch() {
-				document.getElementById("Search").style.display = "block";
-			}
-			function closeSearch() {
-				document.getElementById("Search").style.display = "none";
-			}
-		</script>		
-
-	</body>
-
-</html>
+{% endblock %}
