--- a/templates/custom.html
+++ b/templates/custom.html
@@ -120,6 +120,11 @@
                     {% endif %}
                   </ul>
                 </li>
+                <li>
+									<a href="{% url 'product:card' %}" >
+										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg"></span>
+									</a>
+								</li>
 
                 {% else %}
 
