--- a/templates/base.html
+++ b/templates/base.html
@@ -240,6 +240,27 @@
 			<a id="back2Top" class="top-scroll" title="Back to top" href="#"><i class="ti-arrow-up"></i></a>
 			
 
+			<div class="fixedBTNS">
+				<div class="TwoBTNS">
+					<div class="cats_side_wrap text-center mx-auto mb-1">
+						<div class="sl_cat_01">
+							<div class="d-inline-flex align-items-center justify-content-center p-3 circle mb-2" title="Support">
+								<a href="javascript:void(0);" class="d-block"><img src="{% static 'assets/img/newImages/New_Icons/support.png' %}" class="img-fluid" width="30" alt=""></a>
+							</div>
+						</div>
+					</div>
+					<div class="cats_side_wrap text-center mx-auto mb-2">
+						<div class="sl_cat_01">
+							<div class="d-inline-flex align-items-center justify-content-center p-3 circle mb-2" title="call A Designer">
+								<a href="javascript:void(0);" class="d-block"><img src="{% static 'assets/img/newImages/New_Icons/designer.png' %}" class="img-fluid" width="30" alt=""></a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+
 		</div>
 		<!-- ============================================================== -->
 		<!-- End Wrapper -->
