--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -86,18 +86,43 @@ color: #000;
 					</div>
 				</div>
 				<!-- ======================= Top Breadcrubms ======================== -->
+				<div class="videoDesigner">
+					<div class="videoBanner">
+                        <video muted autoplay loop>
+                            <source src="{% static 'assets/Videos/1.mp4' %}">
+                        </video>
+                    </div>
+				</div>
 				
 				<!-- ======================= Dashboard Detail ======================== -->
 				<section class="middle CheckOutPage cllExpertTwo">
 					<div class="container">
 
-						<div class="BannerAndBosterMockup p-0">
-							<div class="titileDescr">
-								<h2>Call A Designer</h2>
-								<div class="descriptionPara">
-									<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+						<div class="BannerAndBosterMockup CallDesignserBoxxPage p-0">
+							<div class="row">
+								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+									<div class="ImageDesigneeer">
+										<div class="mage">
+											<img src="{% static 'assets/img/newImages/New_Icons/designerrcaller.jpg' %}">
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+									<div class="titileDescr">
+										<div class="forflexx">
+											<h2>Call A Designer</h2>
+											<div class="descriptionPara">
+												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
+						</div>
+						<div class="bookTitle">
+							<h2>Call A Designer</h2>
+							<p>project</p>
 						</div>
 						<div class="row align-items-start justify-content-between">
 							<div class="col-lg-12 col-md-12 col-sm-12">
