--- a/templates/index.html
+++ b/templates/index.html
@@ -796,7 +796,7 @@
 								<h4 class="ft-medium mb-3 theme-cl">Make a Call</h4>
 								<h6 class="ft-medium mb-1">Customer Care:</h6>
 								<p class="mb-2">+91 458 753 6924</p>
-								<h6 class="ft-medium mb-1">Careers::</h6>
+								<h6 class="ft-medium mb-1">Careers:</h6>
 								<p>+91 965 784 23658</p>
 							</div>
 							
