--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -5927,11 +5927,12 @@ font-size: 16px;;
     width: 100%;
     height: auto;
     position: relative;
+    overflow: auto;
 }
 .BannerAndBosterMockup .mockupsImagess .mokUpImageItem .imageMock{
     display: block;
-    width: 100%;
-    height: auto;
+    width: 470px;
+    height: 533px;
 }
 .BannerAndBosterMockup .mockupsImagess .mokUpImageItem .imageUploaded{
     position: absolute;
@@ -6515,7 +6516,9 @@ margin-bottom: 20px;
 .CallDesignserBoxxPage .ImageDesigneeer {
     margin-bottom: 30px;
 }
-
+.BannerAndBosterMockup .mockupsImagess .mokUpImageItem{
+    overflow: auto;
+}
 }
 
 
