--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -197,8 +197,8 @@ color: #000;
 	
 														<div class="col-lg-12 col-md-12 col-sm-12">
 															<div class="form-group text-center">
-																<!-- <button type="submit" id="submitbtn" class="btn BookBUTTON full-width" disabled>
-																	Book Date & Time Now</button> -->
+																<button type="submit" id="submitbtn" class="btn BookBUTTON full-width" disabled>
+																	Book Date & Time Now</button> 
 															</div>
 														</div>
 	
@@ -207,7 +207,7 @@ color: #000;
 													</div>
 												</form>
 												<div class=" col col-md-12">
-													{{ paypal.render }}
+													{% comment %} {{ paypal.render }} {% endcomment %}
 												</div>
 												<!--/row -->
 											</div>
