--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -101,7 +101,7 @@ color: #000;
 								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 									<div class="ImageDesigneeer">
 										<div class="mage">
-											<img src="{% static 'assets/img/newImages/CallDesigner/web2.png' %}">
+											<img src="{% static 'assets/img/newImages/CallDesigner/web1.png' %}">
 										</div>
 									</div>
 								</div>
@@ -192,9 +192,14 @@ color: #000;
 															</div>
 															<div class="notsBoxCallEcpert">
 																<ul>
-																	<li><span></span><p>Note 1</p></li>
-																	<li><span></span><p>Note 1</p></li>
-																	<li><span></span><p>Note 1</p></li>
+																	<li><p>
+																		live chat with your designer
+																		lorem ipsum dolor sit amet,
+																		consectetur adipiscing elit,
+																		sed do eiusmod tempor incididunt
+																		ut labore et dolore magna aliqua.
+																	</p></li>
+																	
 																</ul>
 															</div>
 														</div>
