--- a/templates/ChooseDesigner.html
+++ b/templates/ChooseDesigner.html
@@ -27,36 +27,32 @@
 					<div class="row align-items-center justify-content-center ">
 						<div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
                             <div class="chosedesinerBox">
+								<a href="{% url 'call_expert:callEpertTwo' %}">
 								<div class="titile">
-									<h2>For Fast Designe <span>6$</span></h2>
+									<h2> Call A Designer</h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
-										<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+										<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 									</div>
-									<div class="ChoseDesignerBTN">
-										<a href="{% url 'call_expert:callEpertTwo' %}">
-											Call Now
-										</a>
-									</div>
+									
 								</div>
+								</a>
 							</div>
                         </div>
 						<div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
                             <div class="chosedesinerBox">
+								<a href="{% url 'call_expert:call_senior_designer' %}">
 								<div class="titile">
 									<h2>Call Expert Designer</h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
-										<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+										<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 									</div>
-									<div class="ChoseDesignerBTN">
-										<a href="{% url 'call_expert:call_senior_designer' %}">
-											Call Now
-										</a>
-									</div>
+									
 								</div>
+								</a>
 							</div>
                         </div>
                        
