--- a/templates/base.html
+++ b/templates/base.html
@@ -239,14 +239,13 @@
 
 		
 			
-			<a id="back2Top" class="top-scroll" title="Back to top" href="#"><i class="ti-arrow-up"></i></a>
 			
 
 			<div class="fixedBTNS">
 				<div class="TwoBTNS">
 					<div class="cats_side_wrap text-center mx-auto mb-1">
 						<div class="sl_cat_01">
-							<div class="d-inline-flex align-items-center justify-content-center p-3 circle mb-2" data-toggle="tooltip" data-placement="left" title="Call Center">
+							<div class="d-inline-flex align-items-center justify-content-center p-3 circle mb-2" data-toggle="tooltip" data-placement="left" title="Contact us">
 								<a href="{% url 'contact_us:contact_us' %}" class="d-block"><img src="{% static 'assets/img/newImages/New_Icons/support.png' %}" class="img-fluid" width="30" alt=""></a>
 							</div>
 						</div>
