--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -89,7 +89,7 @@ color: #000;
 				<div class="videoDesigner">
 					<div class="videoBanner">
                         <video muted autoplay loop>
-                            <source src="{% static 'assets/img/newImages/CallDesigner/1.mp4' %}">
+                            <source src="{% static 'assets/img/newImages/CallDesigner/11.mp4' %}">
                         </video>
                     </div>
 				</div>
@@ -196,9 +196,14 @@ color: #000;
 															</div>
 															<div class="notsBoxCallEcpert">
 																<ul>
-																	<li><span></span><p>Note 1</p></li>
-																	<li><span></span><p>Note 1</p></li>
-																	<li><span></span><p>Note 1</p></li>
+																	<li><p>
+																		live chat with your designer
+																		lorem ipsum dolor sit amet,
+																		consectetur adipiscing elit,
+																		sed do eiusmod tempor incididunt
+																		ut labore et dolore magna aliqua.
+																	</p></li>
+																	
 																</ul>
 															</div>
 														</div>
@@ -223,8 +228,8 @@ color: #000;
 	
 														<div class="col-lg-12 col-md-12 col-sm-12">
 															<div class="form-group text-center">
-																<button type="submit" id="submitbtn" class="btn BookBUTTON full-width" disabled>
-																	Book Date & Time Now</button> 
+																{% comment %} <button type="submit" id="submitbtn" class="btn BookBUTTON full-width" disabled>
+																	Book Date & Time Now</button>  {% endcomment %}
 															</div>
 														</div>
 	
@@ -233,7 +238,7 @@ color: #000;
 													</div>
 												</form>
 												<div class=" col col-md-12">
-													{% comment %} {{ paypal.render }} {% endcomment %}
+													{{ paypal.render }}
 												</div>
 												<!--/row -->
 											</div>
