--- a/templates/card.html
+++ b/templates/card.html
@@ -72,6 +72,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="ord_list_body text-left">
+                                                {% if product_card %}
                                                 {% for card in product_card %}
                                                 <tr class="br-bottom">
                                                     <td>
@@ -141,6 +142,15 @@
                                                     </td> {% endcomment %}
                                                 </tr>
                                                 {% endfor %}
+                                                {% else %}
+                                                <tr>
+                                                    <td colspan="6">
+                                                        <div class="alert" role="alert">
+                                                            <strong>Cart is empty!</strong>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                {% endif %}
                                                 
                                                 
                                             </tbody>
