--- a/templates/custom.html
+++ b/templates/custom.html
@@ -22,6 +22,11 @@
     />
     <link href="{% static 'assets/css/custom.css' %}" rel="stylesheet" />
     <link href="{% static 'assets/css/matrial.css' %}" rel="stylesheet" />
+    <!--cdn toaster-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+      >
+    <!--cdn toaster-->
+
   </head>
 
   <body>
@@ -167,25 +172,10 @@
 
       <!-- ======================= Product Detail ======================== -->
       <section class="middle">
-        <div class="container">
-          <div class="row">
-            <!-- <div class="col-12 text-center mb-5">
-                                <h3 class="">To call a Designer click <a class="h3 text-danger" href="{% url 'call_expert:call_expert' %}">here</a> </h3>
-                            </div> -->
-
-            <div class="col-lg-1 col-xs-12">
-              <!-- bring forward , send backward buttons with font aswome icon -->
-              <!--
-                            {% comment %} <div class="btn-group-vertical" role="group" aria-label="Basic example">
-                               
-                                <button type="button" class="btn btn-secondary" id="undoButton"><i class="fas fa-undo"></i>undo</button>
-                         
-                                <button type="button" class="btn btn-secondary" id="redoButton"><i class="fas fa-redo"></i>redo</button>
-                            </div> {% endcomment %}
-
-                        -->
-            </div>
-
+        <div class="container-fluid">
+          <div class="row" style="justify-content:center;">
+            
+            
             <div class="col-lg-5">
               <div class="AllFornt_BackImages">
                 <div class="tab-content">
@@ -280,7 +270,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-5 col-sm-12">
               <div class="CustomTapsDesign">
                 <div class="CustomTapsbody">
                   <div class="TapsHeaders">
@@ -1078,6 +1068,7 @@
                                   Add
                                 </button>
                               </div>
+                        
                               <div class="elementItem">
                                 <button type="button" class="FontTapUpper">
                                   <span class="namoffont">Font name</span>
@@ -1761,7 +1752,7 @@
                                 <p class="lead" id="front_design_price"></p>
                               </div>
                             </div>
-                            <div class="row">
+                            <div class="row d-none">
                               <div class="col-8">
                                 <h3>front design price</h3>
                               </div>
@@ -1777,7 +1768,7 @@
                                 <p class="lead" id="back_design_price"></p>
                               </div>
                             </div>
-                            <div class="row">
+                            <div class="row d-none">
                               <div class="col-8">
                                 <h3>Back design price</h3>
                               </div>
@@ -1804,22 +1795,32 @@
                             </div>
                             <div class="row" id="total_price_dev">
                               <div class="col-8">
-                                <h3>Total price</h3>
+                                <h3>Subtotal price</h3>
                               </div>
                               <div class="col-4">
                                 <p class="lead" id="total_price"></p>
                               </div>
                             </div>
-                            
+                            <div class="row" id="total_price_dev">
+                              <div class="col-8">
+                                <input type="text" placeholder="add copoun" class="form-control" id="copoun_code">
+                              </div>
+                              <div class="col-4">
+                                <div class="">
+                                  <button id="apply_copoun" onclick="apply_copoun()"  class="btn stretched-link borders"
+                                    >Apply Copoun</button>
+                                </div>
+                              </div>
+                            </div>
                             {% if user.is_authenticated %}
-                            <div class="text-center">
+                            <div class="text-center mt-5">
                               <div class="">
                                 <button id="addToCard"  class="btn stretched-link borders"
                                   >Add To Card</button>
                               </div>
                             </div>
                             {% else %}
-                            <div class="text-center">
+                            <div class="text-center mt-5">
                               <div class="">
                                 <a
                                   href="{% url 'accounts:login' %}"
@@ -2434,9 +2435,7 @@
       </div>
       <!-- End Modal -->
 
-      <a id="back2Top" class="top-scroll" title="Back to top" href="#"
-        ><i class="ti-arrow-up"></i
-      ></a>
+
 
       <div class="fixedBTNS">
 				<div class="TwoBTNS">
@@ -2642,9 +2641,9 @@
                     <button
                       type="submit"
                       id="load_old_design"
-                      class="btn btn-md full-width bg-dark text-light fs-md ft-medium"
-                    >
-                      Load Old Design
+                      onclick="load_old_design()"
+                      class="btn btn-md full-width bg-dark text-light fs-md ft-medium">
+                      Continue Designing
                     </button>
                   </div>
                   <div class="col-lg-12 col-md-12">
@@ -2653,7 +2652,7 @@
                       id="close_design_model"
                       class="btn btn-md PreviewBUTTON full-width fs-md ft-medium"
                     >
-                      New Design
+                      Create New Design
                     </button>
                   </div>
                 </div>
@@ -2673,6 +2672,10 @@
     <!-- All Jquery -->
     <!-- ============================================================== -->
     <!--		<script src="{% static 'assets/js/jquery.min.js' %}"></script>-->
+    <!--toaster cdn-->
+
+
+
     <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
     <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
@@ -2684,7 +2687,9 @@
     <script src="{% static 'assets/js/snackbar.min.js' %}"></script>
     <script src="{% static 'assets/js/jQuery.style.switcher.js' %}"></script>
     <script src="{% static 'assets/js/swiper-bundle.min.js' %}"></script>
+
     <script src="{% static 'assets/js/custom.js' %}"></script>
+
     <script>
 			var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
 			var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
@@ -2708,27 +2713,27 @@
         },
         breakpoints: {
           1200: {
-            slidesPerView: 4,
+            slidesPerView: 6,
             spaceBetween: 15,
           },
           1024: {
-            slidesPerView: 3,
+            slidesPerView: 5,
             spaceBetween: 15,
           },
           768: {
-            slidesPerView: 2,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           576: {
-            slidesPerView: 2,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           400: {
-            slidesPerView: 2,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           320: {
-            slidesPerView: 1,
+            slidesPerView: 3,
             spaceBetween: 10,
           },
         },
@@ -2749,27 +2754,27 @@
         },
         breakpoints: {
           1200: {
-            slidesPerView: 5,
+            slidesPerView: 6,
             spaceBetween: 15,
           },
           1024: {
-            slidesPerView: 4,
+            slidesPerView: 5,
             spaceBetween: 5,
           },
           768: {
-            slidesPerView: 3,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           576: {
-            slidesPerView: 3,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           400: {
-            slidesPerView: 3,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
           320: {
-            slidesPerView: 3,
+            slidesPerView: 4,
             spaceBetween: 10,
           },
         },
@@ -3188,17 +3193,36 @@
     </script>
 
     <script>
-      /** setTimeout(function() {
+      // when user try to leave the page 
+      window.onbeforeunload = function() {
+        // Save the entire HTML content, including scripts and styles
+    var capturedHtml = document.documentElement.outerHTML;
+
+    // Save the captured HTML to localStorage
+    localStorage.setItem('capturedHtml', capturedHtml);
+
+      };
+
+      setTimeout(function() {
                 // check if there are outer html in localStorage
-                if (localStorage.getItem('userDesignHTML')) {
+                if (localStorage.getItem("outerhtml")) {
                     // get the modal
                     var modal = document.getElementById("subscribeModal");
                     // show the modal
                     $("#subscribeModal").modal("show");
                 }
         
-    }, 1);**/
+    }, 1);
 
+    // function to load old design
+    function load_old_design() {
+      // get the modal
+      var modal = document.getElementById("subscribeModal");
+      // close the modal
+      $("#subscribeModal").modal("hide");
+      // load all the html and js and css from localStorage
+      document.documentElement.outerHTML = localStorage.getItem("capturedHtml");
+    }
       $(document).ready(function () {
         $("#closseModlSub").click(function () {
           $("#subscribeModal").modal("hide");
