--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -241,6 +241,33 @@ color: #000;
 				</section>
 				<!-- ======================= Dashboard Detail End ======================== -->
 				
+
+				<div class="modal customModal fade" id="MediaLocatonOffer" tabindex="-1" role="dialog" aria-labelledby="MediaLocatonOffer" aria-hidden="true" >
+					<div class="modal-dialog modal-dialog-centered">
+					  <div class="modal-content">
+						<div class="modal-headers">
+						  <button type="button" id="Close_MediaLocatonOffer" class="close" id="closseModlSub" data-dismiss="modal" aria-label="Close" >
+							<span class="ti-close"></span>
+						  </button>
+						</div>
+			  
+						<div class="modal-body">
+						  <div class="customForm">
+							<div class="form-group">
+							  <div class="row">
+								<div class="col-lg-12 col-md-12">
+								  <div class="mediaProductionDescriptuion">
+									<h1>Description</h1>
+								  </div>
+								</div>
+								
+							  </div>
+							</div>
+						  </div>
+						</div>
+					  </div>
+					</div>
+				  </div>
 			{% block script %}
 			<script src="{% static 'assets/libs/bootstrap-datepicker/js/bootstrap-datepicker.min.js' %}"></script>
 			<script src="{% static 'assets/libs/select2/js/select2.min.js' %}"></script>
@@ -363,7 +390,18 @@ color: #000;
 				}
 			</script>
 	  
-
+	  <script>
+		setTimeout(function() {
+		  $("#MediaLocatonOffer").modal("show")
+		}, 0);
+	  
+		document.getElementById("Close_MediaLocatonOffer").addEventListener("click", function () {
+		  // get the modal
+		  var modal = document.getElementById("MediaLocatonOffer");
+		  // close the modal
+		  $("#MediaLocatonOffer").modal("hide");
+		});
+	  </script>
 
 	
 
