--- a/templates/custom.html
+++ b/templates/custom.html
@@ -105,7 +105,7 @@
                 {% if user.is_authenticated %}
                 <li>
                   <a class="ProfileLinkHeader">
-                    {% if user.profile.image %}
+                    {% if user.profile.image and user.profile.image.url != "/media/False" %}
 										<img class="UserProfileImages" src="{{ user.profile.image.url }}">
 										{% else %}
 										<!--user icon-->
